# os-playground

./: .gn  BUILD.gn  Makefile
bootloader/: BUILD.gn  head.S  linker_script.ld  main.c
elfloader/: BUILD.gn  head.S  linker_script.ld  main.c
include/: processor.h  string.h
kernel/: BUILD.gn  head.S  linker_script.ld  main.c
